Set fonts and colours.

--- a/source/assets/stylesheets/config/_colors.scss
+++ b/source/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #167FFB;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+
+$isabelline: #F4EBE8;
+$taupe: #918C8E;
+$grey: #5C5552;
+$raisin: #2D2D34;
+$blue: #3993DD;
+$orange: #FC5130;
+$rose: #FF5666;
