--- a/source/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/source/assets/stylesheets/config/_bootstrap_variables.scss
@@ -6,15 +6,15 @@
 // General style
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
-$body-bg:                 $light-gray;
+$body-bg:                 $isabelline;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $gray;
+$body-color: $raisin;
 $primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
+$success:    $taupe;
+$info:       $grey;
+$danger:     $rose;
 $warning:    $orange;
 
 // Buttons & inputs' radius
