--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <div class="row justify-content-center">
-    <div class="col">
-      <h1>Middleman Boilerplate</h1>
-      <p>Bootstrap and Font Awesome already installed.</p>
+    <div class="container-name">
+      <h1>Ryan Joseph Johnson</h1>
+      <h2>Full-Stack Web Developer</h2>
     </div>
   </div>
 </div>
