--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,4 +5,9 @@
       <h2>Full-Stack Web Developer</h2>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <div class="card-project">
+      <p>Here are some of my projects...</p>
+    </div>
+  </div>
 </div>
