--- a/source/assets/stylesheets/config/_fonts.scss
+++ b/source/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Palanquin:wght@100;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;300;700;900&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Palanquin', sans-serif;
-$headers-font: 'Cabin Sketch', cursive;
+$body-font: 'Libre Franklin', sans-serif;
+$headers-font: 'Libre Franklin', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
