--- a/source/assets/stylesheets/components/_card.scss
+++ b/source/assets/stylesheets/components/_card.scss
@@ -1,36 +1,56 @@
 .card-projects {
   min-height: 100%;
   background-color: $raisin;
-  padding: 8px;
-  border-radius: 2px;
   margin: 8px;
+  padding: 4px;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px;
   p {
     margin: 0;
   }
 }
 
 .card-projects-title {
-  background-color: $raisin;
-  opacity: 0.8;
-  position: absolute;
-  border-radius: 0 0 2px 0;
+  // position: absolute;
+  // top: 16px;
+  display: flex;
+  justify-content: flex-end;
+  background-color: $white;
   h3 {
-    color: $white;
+    color: $raisin;
     font-weight: bold;
     font-size: 1.2rem;
     margin: 8px;
+    text-shadow: 0 0 1px;
   }
 }
 
 .card-projects-img {
-  background-color: $taupe;
+  background-color: $isabelline;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  height: 200px;
+  height: 250px;
+}
+
+.card-projects-tech {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  height: 250px;
+  i {
+    margin: 4px;
+    padding: 4px;
+    opacity: 0.9;
+    font-size: 1.6rem;
+    background-color: $white;
+    color: $raisin;
+    border-radius: 2px;
+  }
 }
 
 .card-projects-desc {
+  margin: 8px;
   p {
     color: $white;
     font-size: 0.8rem;
