--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,13 @@
 <div class="container mt-3">
   <div class="row justify-content-center">
-    <div class="container-name">
-      <h1>Ryan Joseph Johnson</h1>
-      <h2>Full-Stack Web Developer</h2>
+    <div class="container-title">
+      <div class="container-name">
+        <h1>Ryan Joseph Johnson</h1>
+        <h2>Full-Stack Web Developer</h2>
+      </div>
+      <%= image_tag "ry.png", class: "img-me"%>
     </div>
   </div>
   <!-- Projects -->
-  <%= partial 'partials/projects' %>
+  <%= partial "partials/projects" %>
 </div>
