Add links to project cards.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,6 +8,8 @@
       <%= image_tag "ry.png", class: "img-me"%>
     </div>
   </div>
+  <!-- About -->
+  <%= partial "partials/about" %>
   <!-- Projects -->
   <%= partial "partials/projects" %>
 </div>
