--- a/source/assets/stylesheets/components/_card.scss
+++ b/source/assets/stylesheets/components/_card.scss
@@ -5,14 +5,23 @@
   padding: 4px;
   border-radius: 2px;
   box-shadow: 0 1px 2px;
+  transition: 1s;
   p {
     margin: 0;
   }
 }
 
+.card-projects:hover {
+  background-color: $grey;
+  .card-projects-title > h3 {
+    color: $grey;
+  }
+  .card-projects-img {
+    background-color: $bone;
+  }
+}
+
 .card-projects-title {
-  // position: absolute;
-  // top: 16px;
   display: flex;
   justify-content: flex-end;
   background-color: $white;
@@ -22,6 +31,7 @@
     font-size: 1.2rem;
     margin: 8px;
     text-shadow: 0 0 1px;
+    transition: 1s;
   }
 }
 
@@ -31,6 +41,7 @@
   background-position: center;
   background-repeat: no-repeat;
   height: 250px;
+  transition: 1s;
 }
 
 .card-projects-tech {
