Add about.html.erb partial.

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,3 +1,3 @@
 <h2>About</h2>
 
-<p>A little bit about me.</p>
+<p>I'm a full-stack web developer, living in Osaka. My entry to programming was through front-end web design, but I quickly realised my enjoyment for algorithmic problem-solving as soon as I ran into Javascript. I have a background in furniture design and production, so I am used to (and revel in) the demands of combining front-end fancifulness with back-end practicality.</p>
