Add social links.

--- a/source/assets/stylesheets/components/_container.scss
+++ b/source/assets/stylesheets/components/_container.scss
@@ -3,6 +3,11 @@
   align-items: center;
 }
 
+.container-links {
+  display: flex;
+  margin: 8px;
+}
+
 .container-name {
   text-align: center;
   h1 {
