--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,10 @@
 <div class="container mt-3">
   <div class="row justify-content-center">
     <div class="container-title">
+      <div class="container-links">
+        <%= link_to "", "https://github.com/khatakslied", class: "fab fa-github link-icon", target: "_blank" %>
+        <%= link_to "", "https://www.linkedin.com/in/ryan-joseph-johnson", class: "fab fa-linkedin link-icon", target: "_blank" %>
+      </div>
       <div class="container-name">
         <h1>Ryan Joseph Johnson</h1>
         <h2>Full-Stack Web Developer</h2>
