Fix title responsiveness.

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -1,4 +1,6 @@
-<h2>Projects</h2>
+<div class="text-center mt-5">
+  <h2>Projects</h2>
+</div>
 <div class="row">
   <% data.projects.each do |project| %>
     <div class="col-12 col-sm-6 col-lg-4 p-3">
