--- a/source/assets/stylesheets/components/_general.scss
+++ b/source/assets/stylesheets/components/_general.scss
@@ -1,3 +1,14 @@
+h1 {
+  background-color: $raisin;
+  color: $bone;
+  padding: 2px 8px;
+  border-radius: 2px;
+}
+
+h2 {
+  margin-bottom: 16px;
+}
+
 a {
   text-decoration: none !important;
   &:hover {
@@ -9,13 +20,9 @@ a {
   color: $raisin;
   font-size: 2.5rem;
   margin: 8px;
-  text-shadow: 1px 1px 0 $white;
+  text-shadow: 0 1px 1px;
   transition: 1s;
   &:hover {
     color: $rose !important;
   }
 }
-
-// h2 {
-//   text-shadow: 1px 1px 0 $white;
-// }
