--- a/source/assets/stylesheets/components/_image.scss
+++ b/source/assets/stylesheets/components/_image.scss
@@ -1,7 +1,7 @@
 .img-me {
   width: 120px;
   margin: 16px;
-  border: 4px solid $rose;
+  border: 4px solid $raisin;
   border-radius: 50%;
   box-shadow: 0 1px 2px;
 }
