--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,4 +13,6 @@
   <%= partial "partials/about" %>
   <!-- Projects -->
   <%= partial "partials/projects" %>
+    <!-- Contact -->
+  <%= partial "partials/contact" %>
 </div>
