Style contact form.

--- a/source/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/source/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,7 +11,7 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $raisin;
-$primary:    $blue;
+$primary:    $raisin;
 $success:    $taupe;
 $info:       $grey;
 $danger:     $rose;
