--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3 mb-5">
   <div class="d-flex flex-column align-items-center">
     <div class="text-center">
       <h1>Ryan Joseph Johnson</h1>
