--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -1,12 +1,19 @@
-<form action="https://getform.io/f/4310d3f7-e0ec-4ab1-8650-e6dcb580213f" method="POST">
-  <div class="form-group">
-    <input type="text" name="name" class="form-control" placeholder="Name" required=true>
+<div class="text-center mt-5">
+  <h2>Contact</h2>
+</div>
+<div class="row justify-content-center">
+  <div class="col-8">
+    <form action="https://getform.io/f/4310d3f7-e0ec-4ab1-8650-e6dcb580213f" method="POST">
+      <div class="form-group">
+        <input type="text" name="name" class="form-control" placeholder="Name" required=true>
+      </div>
+      <div class="form-group">
+        <input type="email" name="email" class="form-control" placeholder="Email" required=true>
+      </div>
+      <div class="form-group">
+        <textarea type="text" name="message" class="form-control" placeholder="Message..." required=true></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Send</button>
+    </form>
   </div>
-  <div class="form-group">
-    <input type="email" name="email" class="form-control" placeholder="Email" required=true>
-  </div>
-  <div class="form-group">
-    <textarea type="text" name="message" class="form-control" placeholder="Message..." required=true></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary w-100">Send</button>
-</form>
+</div>
