Add contact anchor & link.

--- a/source/assets/stylesheets/components/_index.scss
+++ b/source/assets/stylesheets/components/_index.scss
@@ -1,5 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
+@import "button";
 @import "card";
 @import "image";
 @import "general";
