--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,6 +7,7 @@
     <div class="d-flex align-items-center">
       <%= link_to "", "https://github.com/khatakslied", class: "fab fa-github link-icon", target: "_blank" %>
       <%= link_to "", "https://www.linkedin.com/in/ryan-joseph-johnson", class: "fab fa-linkedin link-icon", target: "_blank" %>
+      <%= link_to "", uri_root_path, anchor: "contact", class: "fas fa-envelope-square link-icon" %>
     </div>
   </div>
   <!-- About -->
