--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -1,8 +1,8 @@
 <div class="text-center mt-5">
-  <h2>Contact</h2>
+  <h2 id="contact">Contact</h2>
 </div>
 <div class="row justify-content-center">
-  <div class="col-8">
+  <div class="col-8 p-3">
     <form action="https://getform.io/f/4310d3f7-e0ec-4ab1-8650-e6dcb580213f" method="POST">
       <div class="form-group">
         <input type="text" name="name" class="form-control" placeholder="Name" required=true>
@@ -13,7 +13,7 @@
       <div class="form-group">
         <textarea type="text" name="message" class="form-control" placeholder="Message..." required=true></textarea>
       </div>
-      <button type="submit" class="btn btn-primary w-100">Send</button>
+      <button type="submit" class="button-contact">Send</button>
     </form>
   </div>
 </div>
