--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center mt-5">
-  <h2>Projects</h2>
+  <i class="fas fa-hammer static-icon"></i><h2>Projects</h2>
 </div>
 <div class="row justify-content-center">
   <% data.projects.each do |project| %>
