--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center mt-5">
-  <h2 id="contact">Contact</h2>
+  <i class="fas fa-envelope static-icon"></i><h2 id="contact">Contact</h2>
 </div>
 <div class="row justify-content-center">
   <div class="col-8 p-3">
