Rewrite about message.

--- a/source/assets/stylesheets/components/_general.scss
+++ b/source/assets/stylesheets/components/_general.scss
@@ -10,6 +10,11 @@ h1 {
   border-radius: 2px;
 }
 
+strong {
+  color: $rose;
+  font-weight: normal;
+}
+
 a {
   text-decoration: none !important;
   &:hover {
