--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -2,6 +2,6 @@
   <i class="fas fa-user-alt static-icon"></i><h2>About</h2>
   <div class="d-flex flex-column flex-sm-row align-items-center">
     <%= image_tag "ry.png", class: "img-me"%>
-    <p>I'm a full-stack web developer, living in Osaka. My entry to programming was through front-end web design, but I quickly realised my enjoyment for algorithmic problem-solving as soon as I ran into Javascript. I have a background in furniture design and production, so I am used to (and revel in) the demands of combining fancifulness (front-end) with practicality (back-end). Currently, I am focusing on building applications in <strong>Rails</strong> and <strong>React.</strong></p>
+    <p>I'm a full-stack web developer, living in Osaka. My entry to programming was through front-end web design, but I quickly realised my enjoyment for algorithmic problem-solving as soon as I ran into Javascript. I have a background in furniture design and production, so I am used to (and revel in) the demands of combining fancifulness (front-end) with practicality (back-end). Currently, I am focusing on building applications in <strong>Rails</strong> and <strong>React</strong>.</p>
   </div>
 </div>
