Rearrange social icons & change contact form placeholder message.

--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -11,7 +11,7 @@
         <input type="email" name="email" class="form-control" placeholder="Email" required=true>
       </div>
       <div class="form-group">
-        <textarea type="text" name="message" class="form-control" placeholder="Message..." required=true></textarea>
+        <textarea type="text" name="message" class="form-control" placeholder="What's on your mind...?" required=true></textarea>
       </div>
       <button type="submit" class="button-contact">Send</button>
     </form>
