--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -24,3 +24,8 @@
     </div>
   <% end %>
 </div>
+<div class="d-flex flex-column text-center p-3">
+  <p>Upcoming projects: </p>
+  <small># An <strong>online gallery & store</strong> for a London-based artist, built with <strong>Node.js</strong> and <strong>React</strong>.</small>
+  <small># A <strong>colleague feedback & mentor-matching application</strong>, built with <strong>Rails</strong> and <strong>React</strong>.</small>
+</div>
